--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <header>
-        <nav><button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+        <nav>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
         </nav>
     </header>
     <div id="content"></div>
